@@ -1,8 +1,10 @@
 package org.example.fitpass.common.security;
 
+import java.util.List;
 import lombok.Getter;
 import org.example.fitpass.domain.user.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
@@ -21,9 +23,10 @@ public class CustomUserDetails implements UserDetails {
         return user.getId();
     }
 
+    // 인가 부분
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 권한 없음
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getUserRole()));
     }
 
     @Override
